# modern-string

./: CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  README_en.md  __test.cpp  base.h  ks_basic_immutable_string.h  ks_basic_immutable_string.inl  ks_basic_mutable_string.h  ks_basic_mutable_string.inl  ks_basic_pointer_iterator.h  ks_basic_string_allocator.h  ks_basic_string_allocator.inl  ks_basic_string_view.cpp  ks_basic_string_view.h  ks_basic_string_view.inl  ks_basic_xmutable_string_base.cpp  ks_basic_xmutable_string_base.h  ks_basic_xmutable_string_base.inl  ks_string.h  ks_string_util.cpp  ks_string_util.h  ks_string_util.inl  ks_string_util_convert.cpp  ks_string_util_convert.h  ks_string_util_parse.cpp  ks_string_util_parse.h  ks_string_view.h  ks_type_traits.h
